# FastAPI-frame

./: .gitignore  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_24_1356-7a72dcdf853f_initial.py  2024_04_24_1406-835ecbe05a24_names_correction.py  9128d3d906bb_unique_email_migration.py  f06d6e640558_initial_migration.py
auth/: utils.py  validations.py
core/: config.py  database.py
models/: __init__.py  product.py  role.py  user.py
users/: crud.py  models.py  schemas.py  views.py
utils/: database.py
